refactor node certificate naming strategy